--- a/index.html
+++ b/index.html
@@ -224,8 +224,7 @@
 					<br>
 					<li><h5>Involved Projects:</h5>
 					<ul> 
-                        <li> 国家自然科学基金数学天元基金项目，在研，参与
-                        <li> 国家重点研发计划“数学和应用研究”专项“揭榜挂帅”项目子课题，在研，参与
+                        <li> 国家自然科学基金数学天元基金项目，结题，参与
 					</ul>
 
 
