--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div class="grid2" id="biography">
 			<h3>Biography</h3>
 			<p>
-				Qingsong Wang, male, Han nationality, was born in December 1992 in Bazhong, Sichuan Province, China. He received his Ph.D. in Applied Mathematics from the School of Mathematical Sciences, Beihang University, in June 2023, under the supervision of Prof. Deren Han and co-supervision of Prof. Chunfeng Cui. His research focuses on numerical optimization, machine learning, and related areas, including (non)convex optimization and tensor optimization. He has participated in national and other research projects and has published multiple papers in top AI conferences such as AAAI and academic journals including IEEE TIP, JOTA, and JCAM.
+				Qingsong Wang, male, was born in December 1992 in Bazhong, Sichuan Province, China. He received his PhD in Applied Mathematics from the School of Mathematical Sciences, Beihang University, in 2023, under the supervision of Prof. Deren Han and co-supervision of Prof. Chunfeng Cui. His research focuses on numerical optimization, machine learning, and related areas, including (non)convex optimization and tensor optimization. He has participated in national and other research projects and has published multiple papers in top AI conferences such as AAAI and academic journals including IEEE TSP, COAP, JOTA, and JCAM.
 			</p>
 		</div>
 		<!--个人简介结束-->
@@ -107,7 +107,7 @@
 
                 <div class="col-md-8">
                     <h4><b>A generalized inertial proximal alternating linearized minimization method for nonconvex nonsmooth problems </b></h4>
-                    <h5> Q Wang, D Han. Applied Numerical Mathematics 2024.</h5>
+                    <h5> <b> Qingsong Wang </b>, Deren Han. Applied Numerical Mathematics 2024.</h5>
                     <h6>   
                         [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0168927423000855">paper</a>] 
                         [<a href="https://github.com/nothing2wang/NiPALM-Algorithm">code</a>]
@@ -126,7 +126,7 @@
 
 		        <div class="col-md-8">
 		            <h4><b>A Bregman proximal stochastic gradient method with extrapolation for nonconvex nonsmooth problems</b></h4>
-		            <h5> Q Wang, Z Liu, C Cui, D Han. Proceedings of the AAAI Conference on Artificial Intelligence 2024.</h5>
+		            <h5> <b> Qingsong Wang </b>, Zehui Liu, Chunfeng Cui, Deren Han. Proceedings of the AAAI Conference on Artificial Intelligence 2024.</h5>
 		            <h6>   
 		            	[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/29485">paper</a>] 
 		            	[<a href="https://github.com/nothing2wang/BPSGE-Algorithm">code</a>]
@@ -145,7 +145,7 @@
 
                 <div class="col-md-8">
                     <h4><b> Inertial accelerated SGD algorithms for solving large-scale lower-rank tensor CP decomposition problems</b></h4>
-                    <h5>  Qingsong Wang, Zehui Liu, Chunfeng Cui, Deren Han</b>. Journal of Computational and Applied Mathematics 2023.</h5>
+                    <h5>  <b> Qingsong Wang </b>, Zehui Liu, Chunfeng Cui, Deren Han</b>. Journal of Computational and Applied Mathematics 2023.</h5>
                     <h6>   
                         [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0377042722005465">paper</a>] 
                         <!-- [<a href="https://github.com/xxxx">code</a>] -->
@@ -165,7 +165,7 @@
 
                 <div class="col-md-8">
                     <h4><b>A Momentum Accelerated Algorithm for ReLU-Based Nonlinear Matrix Decomposition</b></h4>
-                    <h5> <b> Q Wang </b>, C Cui, D Han. IEEE Signal Processing Letters 2023.</h5>
+                    <h5> <b> Qingsong Wang </b>, C Cui, D Han. IEEE Signal Processing Letters 2023.</h5>
                     <h6>   
                         [<a href="https://arxiv.org/pdf/2402.02442">paper</a>] 
                         <!-- [<a href="https://github.com/xxxx">code</a>] -->
@@ -184,7 +184,7 @@
 
                 <div class="col-md-8">
                     <h4><b>A Bregman stochastic method for nonconvex nonsmooth problem beyond global Lipschitz gradient continuity</b></h4>
-                    <h5> Qingsong Wang, Deren Han. Optimization Methods and Software 2023.</h5>
+                    <h5> <b> Qingsong Wang </b>, Deren Han. Optimization Methods and Software 2023.</h5>
                     <h6>   
                         [<a href="https://www.tandfonline.com/doi/abs/10.1080/10556788.2023.2189717">paper</a>] 
                         <!-- [<a href="https://github.com/xxxx">code</a>] -->
