--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                 <div class="col-md-8">
                     <h4><b>A generalized inertial proximal alternating linearized minimization method for nonconvex nonsmooth problems </b></h4>
-                    <h5> <b> Qingsong Wang </b>, Deren Han. Applied Numerical Mathematics 2024.</h5>
+                    <h5> <b> Qingsong Wang </b>, Deren Han. Applied Numerical Mathematics. 189, 66-87, 2023.</h5>
                     <h6>   
                         [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0168927423000855">paper</a>] 
                         [<a href="https://github.com/nothing2wang/NiPALM-Algorithm">code</a>]
@@ -126,7 +126,7 @@
 
 		        <div class="col-md-8">
 		            <h4><b>A Bregman proximal stochastic gradient method with extrapolation for nonconvex nonsmooth problems</b></h4>
-		            <h5> <b> Qingsong Wang </b>, Zehui Liu, Chunfeng Cui, Deren Han. Proceedings of the AAAI Conference on Artificial Intelligence 2024.</h5>
+		            <h5> <b> Qingsong Wang </b>, Zehui Liu, Chunfeng Cui, Deren Han. Proceedings of the AAAI Conference on Artificial Intelligence, 38(14), 15580-15588, 2024. </h5>
 		            <h6>   
 		            	[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/29485">paper</a>] 
 		            	[<a href="https://github.com/nothing2wang/BPSGE-Algorithm">code</a>]
@@ -145,7 +145,7 @@
 
                 <div class="col-md-8">
                     <h4><b> Inertial accelerated SGD algorithms for solving large-scale lower-rank tensor CP decomposition problems</b></h4>
-                    <h5>  <b> Qingsong Wang </b>, Zehui Liu, Chunfeng Cui, Deren Han</b>. Journal of Computational and Applied Mathematics 2023.</h5>
+                    <h5>  <b> Qingsong Wang </b>, Zehui Liu, Chunfeng Cui, Deren Han</b>. Journal of Computational and Applied Mathematics. 423, 114948, 2023. </h5>
                     <h6>   
                         [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0377042722005465">paper</a>] 
                         <!-- [<a href="https://github.com/xxxx">code</a>] -->
@@ -165,7 +165,7 @@
 
                 <div class="col-md-8">
                     <h4><b>A Momentum Accelerated Algorithm for ReLU-Based Nonlinear Matrix Decomposition</b></h4>
-                    <h5> <b> Qingsong Wang </b>, C Cui, D Han. IEEE Signal Processing Letters 2023.</h5>
+                    <h5> <b> Qingsong Wang </b>, C Cui, D Han. IEEE Signal Processing Letters. 31, 2865-2869, 2024. </h5>
                     <h6>   
                         [<a href="https://arxiv.org/pdf/2402.02442">paper</a>] 
                         <!-- [<a href="https://github.com/xxxx">code</a>] -->
@@ -184,7 +184,7 @@
 
                 <div class="col-md-8">
                     <h4><b>A Bregman stochastic method for nonconvex nonsmooth problem beyond global Lipschitz gradient continuity</b></h4>
-                    <h5> <b> Qingsong Wang </b>, Deren Han. Optimization Methods and Software 2023.</h5>
+                    <h5> <b> Qingsong Wang </b>, Deren Han. Optimization Methods and Software. 38 (5), 914-946, 2023.</h5>
                     <h6>   
                         [<a href="https://www.tandfonline.com/doi/abs/10.1080/10556788.2023.2189717">paper</a>] 
                         <!-- [<a href="https://github.com/xxxx">code</a>] -->
