--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
 		<div class="grid3">
 			<div class="grid3-content">
 	
-				<ul>
+				<!--<ul>
 					<li><h5>Host Projects:</h5>
-					<ul>
+					<ul> -->
                          <li> 国家自然科学基金委员会, 重大研究计划, 92473208, 芯粒分解和组合优化方法, 2025/01 - 2028/12, 300万元, 在研, 参与
                          <li> 国家自然科学基金委员会, 面上项目, 12471282, 耦合张量分解的模型和非光滑优化算法研究, 2025/01 - 2028/12, 43万元, 在研, 参与
                          <li> 国家自然科学基金委员会, 青年科学基金项目（C类）[原青年科学基金项目], 12401415, 数据驱动下广义张量CP分解的模型与算法研究, 2025/01 - 2027/12, 30万元, 在研, 主持
@@ -223,7 +223,9 @@
 					</ul>
 
 					<br>
-
+				<!--<ul>
+					<li><h5>Host Projects:</h5>
+					<ul> -->
 
 
 				</ul>
