--- a/publications.html
+++ b/publications.html
@@ -51,11 +51,19 @@
         <br>
         
 
+        <div class="grid3-year"> <h3> Preprint <h3> </div>
+            <div class="grid3-content">
+                <ul>
+		    <li> <b>Qingsong Wang</b>, Yunfei Qu, Chunfeng Cui, Deren Han. An Accelerated Alternating Partial Bregman Algorithm for ReLU-based Matrix Decomposition. arXiv:2503.02386, 2025.
+		    <li> <b>Qingsong Wang</b>, Shengze Xu, Xiaojiao Tong, Tieyong Zeng. An Improved Optimal Proximal Gradient Algorithm for Non-Blind Image Deblurring. arXiv:2502.07602, 2025.
+                    <li> Zehui Liu, <b>Qingsong Wang</b>, Chunfeng Cui. Multi-step Inertial Accelerated Doubly Stochastic Gradient Methods for Block Term Tensor Decomposition. arXiv:2501.04833, 2025.
+                </ul>
+            </div>
+	    
         <div class="grid3-year"> <h3> 2025 <h3> </div>
             <div class="grid3-content">
                 <ul>
-                    <li> Liu Z, Wang Q, Cui C, et al. Inertial accelerated stochastic mirror descent for large-scale generalized tensor CP decomposition[J]. Computational Optimization and Applications, 2025: 1-33.
-                    <li> Liu Z, Wang Q, Cui C. Multi-step Inertial Accelerated Doubly Stochastic Gradient Methods for Block Term Tensor Decomposition[J]. arXiv preprint arXiv:2501.04833, 2025.
+                    <li> Zehui Liu, <b>Qingsong Wang</b>, Chunfeng Cui, Yong Xia. Inertial accelerated stochastic mirror descent for large-scale generalized tensor CP decomposition. Computational Optimization and Applications, 1-33, 2025.
                 </ul>
             </div>
 
@@ -63,11 +71,11 @@
         <div class="grid3-year"> <h3> 2024 <h3> </div>
             <div class="grid3-content">
                 <ul>
-                    <li> Wang C, Zhao X, Wang Q, et al. An inexact proximal majorization-minimization algorithm for remote sensing image stripe noise removal[J]. Numerical Algorithms, 2024, 97(3): 1119-1139.
-                    <li> Wang Q, Cui C, Han D. A Momentum Accelerated Algorithm for ReLU-based Nonlinear Matrix Decomposition[J]. IEEE Signal Processing Letters, 2024.
-                    <li> Wang Q, Han D, Zhang W. A customized inertial proximal alternating minimization for SVD-free robust principal component analysis[J]. Optimization, 2024, 73(8): 2387-2412.
-                    <li> Wang Q, Han D. Stochastic Gauss–Seidel type inertial proximal alternating linearized minimization and its application to proximal neural networks[J]. Mathematical Methods of Operations Research, 2024, 99(1): 39-74.
-                    <li> Wang Q, Liu Z, Cui C, et al. A Bregman proximal stochastic gradient method with extrapolation for nonconvex nonsmooth problems[C]//Proceedings of the AAAI Conference on Artificial Intelligence. 2024, 38(14): 15580-15588.
+                    <li> Chengjing Wang, Xile Zhao, <b>Qingsong Wang</b>, Zepei Ma, Peipei Tang. An inexact proximal majorization-minimization algorithm for remote sensing image stripe noise removal. Numerical Algorithms, 97(3), 1119-1139, 2024.
+                    <li> <b>Qingsong Wang</b>, Chunfeng Cui, Deren Han. A Momentum Accelerated Algorithm for ReLU-based Nonlinear Matrix Decomposition. IEEE Signal Processing Letters, 31, 2865-2869, 2024.
+                    <li> <b>Qingsong Wang</b>, Deren Han, Wenxing Zhang. A customized inertial proximal alternating minimization for SVD-free robust principal component analysis. Optimization, 73(8), 2387-2412, 2024.
+                    <li> <b>Qingsong Wang</b>, Deren Han. Stochastic Gauss–Seidel type inertial proximal alternating linearized minimization and its application to proximal neural networks. Mathematical Methods of Operations Research, 99(1), 39-74, 2024.
+                    <li> <b>Qingsong Wang</b>, Zehui Liu, Chunfeng Cui, Deren Han. A Bregman proximal stochastic gradient method with extrapolation for nonconvex nonsmooth problems. Proceedings of the AAAI Conference on Artificial Intelligence. 38(14), 15580-15588, 2024.
                 </ul>
             </div>
 
@@ -75,28 +83,38 @@
         <div class="grid3-year"> <h3> 2023 <h3> </div>
             <div class="grid3-content">
                 <ul>
-                    <li> Wang Q, Han D. A Bregman stochastic method for nonconvex nonsmooth problem beyond global Lipschitz gradient continuity[J]. Optimization Methods and Software, 2023, 38(5): 914-946.
-                    <li> Wang Q, Han D. A generalized inertial proximal alternating linearized minimization method for nonconvex nonsmooth problems[J]. Applied Numerical Mathematics, 2023, 189: 66-87.
-                    <li> Wang Q, Liu Z, Cui C, et al. Inertial accelerated SGD algorithms for solving large-scale lower-rank tensor CP decomposition problems[J]. Journal of Computational and Applied Mathematics, 2023, 423: 114948.
-                    <li> Wang Q, Cui C, Han D. Accelerated doubly stochastic gradient descent for tensor CP decomposition[J]. Journal of Optimization Theory and Applications, 2023, 197(2): 665-704.
+                    <li> <b>Qingsong Wang</b>, Deren Han. A Bregman stochastic method for nonconvex nonsmooth problem beyond global Lipschitz gradient continuity. Optimization Methods and Software, 38(5), 914-946, 2023.
+                    <li> <b>Qingsong Wang</b>, Deren Han. A generalized inertial proximal alternating linearized minimization method for nonconvex nonsmooth problems[J]. Applied Numerical Mathematics,  189, 66-87, 2023.
+                    <li> <b>Qingsong Wang</b>, Zehui Liu, Chunfeng Cui, Deren Han. Inertial accelerated SGD algorithms for solving large-scale lower-rank tensor CP decomposition problems[J]. Journal of Computational and Applied Mathematics, 423, 114948, 2023.
+                    <li> <b>Qingsong Wang</b>, Deren Han. Accelerated doubly stochastic gradient descent for tensor CP decomposition[J]. Journal of Optimization Theory and Applications, 197(2), 665-704, 2023.
                 </ul>
             </div>
 
+
+        <div class="grid3-year"> <h3> -2022 <h3> </div>
+            <div class="grid3-content">
+                <ul>
+                    <li> Dunbiao Niu, Chengjing Wang, Peipei Tang, <b>Qingsong Wang</b>, Enbin Song. An efficient algorithm for a class of large-scale support vector machines exploiting hidden sparsity. IEEE Transactions on Signal Processing, 70, 5608-5623, 2022.
+                    <li> Yifan Shao, <b>Qingsong Wang</b>, Deren Han. Efficient methods for convex problems with Bregman Barzilai-Borwein step sizes. Pacific Journal of Optimization, 18(2), 333-348, 2022.
+                </ul>
+            </div>
 
         <div class="grid3-year"> <h3> -2021 <h3> </div>
             <div class="grid3-content">
                 <ul>
-                    <li> Niu D, Wang C, Tang P, et al. An efficient algorithm for a class of large-scale support vector machines exploiting hidden sparsity[J]. IEEE Transactions on Signal Processing, 2022, 70: 5608-5623.
-                    <li> Shao Y, Wang Q, Han D. EFFICIENT METHODS FOR CONVEX PROBLEMS WITH BREGMAN BARZILAI-BORWEIN STEP SIZES[J]. PACIFIC JOURNAL OF OPTIMIZATION, 2022, 18(2): 333-348.
-                    <li> Wang Q, Cui C, Han D. A momentum block-randomized stochastic algorithm for low-rank tensor CP decomposition[J]. PACIFIC JOURNAL OF OPTIMIZATION, 2021, 17(3): 433-452.
-                    <li> Wang Q, Wang C, Tang P, et al. An inexact dual alternating direction method of multipliers for image decomposition and restoration[J]. Asia-Pacific Journal of Operational Research, 2020, 37(04): 2040010.
+                    <li> <b>Qingsong Wang</b>, Chunfeng Cui, Deren Han. A momentum block-randomized stochastic algorithm for low-rank tensor CP decomposition[J]. Pacific Journal of Optimization, 17(3), 433-452, 2021.
+                    <li> <b>Qingsong Wang</b>,  Chengjing Wang, Peipei Tang, Dunbiao Niu. An inexact dual alternating direction method of multipliers for image decomposition and restoration. Asia-Pacific Journal of Operational Research, 37(04), 2040010, 2020.
 
                 </ul>
             </div>
 
-
-
-
+        <div class="grid3-year"> <h3> -2020 <h3> </div>
+            <div class="grid3-content">
+                <ul>
+                    <li> <b>Qingsong Wang</b>,  Chengjing Wang, Peipei Tang, Dunbiao Niu. An inexact dual alternating direction method of multipliers for image decomposition and restoration. Asia-Pacific Journal of Operational Research, 37(04), 2040010, 2020.
+		    <li> 史冰冰, <b>王青松</b>. 基于对偶的不精确交替方向乘子法求解核范数正则化最小二乘问题. 高校应用数学学报: A 辑, 35(2), 181-190, 2020.
+                </ul>
+            </div>
 
 
 
