--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                 <div class="col-md-8">
                     <h4><b> Inertial accelerated SGD algorithms for solving large-scale lower-rank tensor CP decomposition problems</b></h4>
-                    <h5>  <b> Qingsong Wang </b>, Zehui Liu, Chunfeng Cui, Deren Han</b>. Journal of Computational and Applied Mathematics. 423, 114948, 2023. </h5>
+                    <h5>  <b> Qingsong Wang </b>, Zehui Liu, Chunfeng Cui, Deren Han<b>*</b>. Journal of Computational and Applied Mathematics. 423, 114948, 2023. </h5>
                     <h6>   
                         [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0377042722005465">paper</a>] 
                         <!-- [<a href="https://github.com/xxxx">code</a>] -->
