--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
                 <div class="col-md-8">
                     <h4><b>A Momentum Accelerated Algorithm for ReLU-Based Nonlinear Matrix Decomposition</b></h4>
-                    <h5> <b> Qingsong Wang </b>, C Cui, D Han. IEEE Signal Processing Letters. 31, 2865-2869, 2024. </h5>
+                    <h5> <b> Qingsong Wang </b>, Chunfeng Cui, Deren Han. IEEE Signal Processing Letters. 31, 2865-2869, 2024. </h5>
                     <h6>   
                         [<a href="https://arxiv.org/pdf/2402.02442">paper</a>] 
                         <!-- [<a href="https://github.com/xxxx">code</a>] -->
