--- a/publications.html
+++ b/publications.html
@@ -54,16 +54,16 @@
         <div class="grid3-year"> <h3> Preprint <h3> </div>
             <div class="grid3-content">
                 <ul>
-		    <li> <b>Qingsong Wang</b>, Yunfei Qu, Chunfeng Cui, Deren Han. An Accelerated Alternating Partial Bregman Algorithm for ReLU-based Matrix Decomposition. arXiv:2503.02386, 2025.
-		    <li> <b>Qingsong Wang</b>, Shengze Xu, Xiaojiao Tong, Tieyong Zeng. An Improved Optimal Proximal Gradient Algorithm for Non-Blind Image Deblurring. arXiv:2502.07602, 2025.
-                    <li> Zehui Liu, <b>Qingsong Wang</b>, Chunfeng Cui. Multi-step Inertial Accelerated Doubly Stochastic Gradient Methods for Block Term Tensor Decomposition. arXiv:2501.04833, 2025.
+		    <li> <b>Qingsong Wang</b>, Yunfei Qu, Chunfeng Cui, Deren Han<b>*</b>. An Accelerated Alternating Partial Bregman Algorithm for ReLU-based Matrix Decomposition. arXiv:2503.02386, 2025.
+		    <li> <b>Qingsong Wang</b>, Shengze Xu, Xiaojiao Tong, Tieyong Zeng<b>*</b>. An Improved Optimal Proximal Gradient Algorithm for Non-Blind Image Deblurring. arXiv:2502.07602, 2025.
+                    <li> Zehui Liu, <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>. Multi-step Inertial Accelerated Doubly Stochastic Gradient Methods for Block Term Tensor Decomposition. arXiv:2501.04833, 2025.
                 </ul>
             </div>
 	    
         <div class="grid3-year"> <h3> 2025 <h3> </div>
             <div class="grid3-content">
                 <ul>
-                    <li> Zehui Liu, <b>Qingsong Wang</b>, Chunfeng Cui, Yong Xia. Inertial accelerated stochastic mirror descent for large-scale generalized tensor CP decomposition. Computational Optimization and Applications, 1-33, 2025.
+                    <li> Zehui Liu, <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>, Yong Xia. Inertial accelerated stochastic mirror descent for large-scale generalized tensor CP decomposition. Computational Optimization and Applications, 1-33, 2025.
                 </ul>
             </div>
 
@@ -71,11 +71,11 @@
         <div class="grid3-year"> <h3> 2024 <h3> </div>
             <div class="grid3-content">
                 <ul>
-                    <li> Chengjing Wang, Xile Zhao, <b>Qingsong Wang</b>, Zepei Ma, Peipei Tang. An inexact proximal majorization-minimization algorithm for remote sensing image stripe noise removal. Numerical Algorithms, 97(3), 1119-1139, 2024.
-                    <li> <b>Qingsong Wang</b>, Chunfeng Cui, Deren Han. A Momentum Accelerated Algorithm for ReLU-based Nonlinear Matrix Decomposition. IEEE Signal Processing Letters, 31, 2865-2869, 2024.
-                    <li> <b>Qingsong Wang</b>, Deren Han, Wenxing Zhang. A customized inertial proximal alternating minimization for SVD-free robust principal component analysis. Optimization, 73(8), 2387-2412, 2024.
-                    <li> <b>Qingsong Wang</b>, Deren Han. Stochastic Gauss–Seidel type inertial proximal alternating linearized minimization and its application to proximal neural networks. Mathematical Methods of Operations Research, 99(1), 39-74, 2024.
-                    <li> <b>Qingsong Wang</b>, Zehui Liu, Chunfeng Cui, Deren Han. A Bregman proximal stochastic gradient method with extrapolation for nonconvex nonsmooth problems. Proceedings of the AAAI Conference on Artificial Intelligence. 38(14), 15580-15588, 2024.
+                    <li> Chengjing Wang, Xile Zhao, <b>Qingsong Wang</b>, Zepei Ma, Peipei Tang<b>*</b>. An inexact proximal majorization-minimization algorithm for remote sensing image stripe noise removal. Numerical Algorithms, 97(3), 1119-1139, 2024.
+                    <li> <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>, Deren Han. A Momentum Accelerated Algorithm for ReLU-based Nonlinear Matrix Decomposition. IEEE Signal Processing Letters, 31, 2865-2869, 2024.
+                    <li> <b>Qingsong Wang</b>, Deren Han, Wenxing Zhang<b>*</b>. A customized inertial proximal alternating minimization for SVD-free robust principal component analysis. Optimization, 73(8), 2387-2412, 2024.
+                    <li> <b>Qingsong Wang</b>, Deren Han<b>*</b>. Stochastic Gauss–Seidel type inertial proximal alternating linearized minimization and its application to proximal neural networks. Mathematical Methods of Operations Research, 99(1), 39-74, 2024.
+                    <li> <b>Qingsong Wang</b>, Zehui Liu, Chunfeng Cui<b>*</b>, Deren Han. A Bregman proximal stochastic gradient method with extrapolation for nonconvex nonsmooth problems. Proceedings of the AAAI Conference on Artificial Intelligence. 38(14), 15580-15588, 2024.
                 </ul>
             </div>
 
@@ -83,10 +83,10 @@
         <div class="grid3-year"> <h3> 2023 <h3> </div>
             <div class="grid3-content">
                 <ul>
-                    <li> <b>Qingsong Wang</b>, Deren Han. A Bregman stochastic method for nonconvex nonsmooth problem beyond global Lipschitz gradient continuity. Optimization Methods and Software, 38(5), 914-946, 2023.
-                    <li> <b>Qingsong Wang</b>, Deren Han. A generalized inertial proximal alternating linearized minimization method for nonconvex nonsmooth problems[J]. Applied Numerical Mathematics,  189, 66-87, 2023.
-                    <li> <b>Qingsong Wang</b>, Zehui Liu, Chunfeng Cui, Deren Han. Inertial accelerated SGD algorithms for solving large-scale lower-rank tensor CP decomposition problems[J]. Journal of Computational and Applied Mathematics, 423, 114948, 2023.
-                    <li> <b>Qingsong Wang</b>, Deren Han. Accelerated doubly stochastic gradient descent for tensor CP decomposition[J]. Journal of Optimization Theory and Applications, 197(2), 665-704, 2023.
+                    <li> <b>Qingsong Wang</b>, Deren Han<b>*</b>. A Bregman stochastic method for nonconvex nonsmooth problem beyond global Lipschitz gradient continuity. Optimization Methods and Software, 38(5), 914-946, 2023.
+                    <li> <b>Qingsong Wang</b>, Deren Han<b>*</b>. A generalized inertial proximal alternating linearized minimization method for nonconvex nonsmooth problems. Applied Numerical Mathematics,  189, 66-87, 2023.
+                    <li> <b>Qingsong Wang</b>, Zehui Liu, Chunfeng Cui, Deren Han<b>*</b>. Inertial accelerated SGD algorithms for solving large-scale lower-rank tensor CP decomposition problems. Journal of Computational and Applied Mathematics, 423, 114948, 2023.
+                    <li> <b>Qingsong Wang</b>, Chunfeng Cui, Deren Han<b>*</b>. Accelerated doubly stochastic gradient descent for tensor CP decomposition. Journal of Optimization Theory and Applications, 197(2), 665-704, 2023.
                 </ul>
             </div>
 
@@ -94,16 +94,16 @@
         <div class="grid3-year"> <h3> -2022 <h3> </div>
             <div class="grid3-content">
                 <ul>
-                    <li> Dunbiao Niu, Chengjing Wang, Peipei Tang, <b>Qingsong Wang</b>, Enbin Song. An efficient algorithm for a class of large-scale support vector machines exploiting hidden sparsity. IEEE Transactions on Signal Processing, 70, 5608-5623, 2022.
-                    <li> Yifan Shao, <b>Qingsong Wang</b>, Deren Han. Efficient methods for convex problems with Bregman Barzilai-Borwein step sizes. Pacific Journal of Optimization, 18(2), 333-348, 2022.
+                    <li> Dunbiao Niu, Chengjing Wang<b>*</b>, Peipei Tang, <b>Qingsong Wang</b>, Enbin Song. An efficient algorithm for a class of large-scale support vector machines exploiting hidden sparsity. IEEE Transactions on Signal Processing, 70, 5608-5623, 2022.
+                    <li> Yifan Shao, <b>Qingsong Wang</b>, Deren Han<b>*</b>. Efficient methods for convex problems with Bregman Barzilai-Borwein step sizes. Pacific Journal of Optimization, 18(2), 333-348, 2022.
                 </ul>
             </div>
 
         <div class="grid3-year"> <h3> -2021 <h3> </div>
             <div class="grid3-content">
                 <ul>
-                    <li> <b>Qingsong Wang</b>, Chunfeng Cui, Deren Han. A momentum block-randomized stochastic algorithm for low-rank tensor CP decomposition[J]. Pacific Journal of Optimization, 17(3), 433-452, 2021.
-                    <li> <b>Qingsong Wang</b>,  Chengjing Wang, Peipei Tang, Dunbiao Niu. An inexact dual alternating direction method of multipliers for image decomposition and restoration. Asia-Pacific Journal of Operational Research, 37(04), 2040010, 2020.
+                    <li> <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>, Deren Han. A momentum block-randomized stochastic algorithm for low-rank tensor CP decomposition. Pacific Journal of Optimization, 17(3), 433-452, 2021.
+                    <li> <b>Qingsong Wang</b>,  Chengjing Wang<b>*</b>, Peipei Tang, Dunbiao Niu. An inexact dual alternating direction method of multipliers for image decomposition and restoration. Asia-Pacific Journal of Operational Research, 37(04), 2040010, 2020.
 
                 </ul>
             </div>
@@ -111,8 +111,7 @@
         <div class="grid3-year"> <h3> -2020 <h3> </div>
             <div class="grid3-content">
                 <ul>
-                    <li> <b>Qingsong Wang</b>,  Chengjing Wang, Peipei Tang, Dunbiao Niu. An inexact dual alternating direction method of multipliers for image decomposition and restoration. Asia-Pacific Journal of Operational Research, 37(04), 2040010, 2020.
-		    <li> 史冰冰, <b>王青松</b>. 基于对偶的不精确交替方向乘子法求解核范数正则化最小二乘问题. 高校应用数学学报: A 辑, 35(2), 181-190, 2020.
+		    <li> 史冰冰, <b>王青松</b><b>*</b>. 基于对偶的不精确交替方向乘子法求解核范数正则化最小二乘问题. 高校应用数学学报: A 辑, 35(2), 181-190, 2020.
                 </ul>
             </div>
 
