--- a/publications.html
+++ b/publications.html
@@ -51,7 +51,7 @@
         <br>
         
 
-        <div class="grid3-year"> <h3> Preprint <h3> </div>
+        <div class="grid3-year"> <h3> Preprints <h3> </div>
             <div class="grid3-content">
                 <ul>
 		    <li> <b>Qingsong Wang</b>, Yunfei Qu, Chunfeng Cui, Deren Han<b>*</b>. An Accelerated Alternating Partial Bregman Algorithm for ReLU-based Matrix Decomposition. arXiv:2503.02386, 2025.
