--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
 		<div class="grid2" id="biography">
 			<h3>Biography</h3>
 			<p>
-				Qingsong Wang, male, was born in December 1992 in Bazhong, Sichuan Province, China. He received his PhD in Applied Mathematics from the School of Mathematical Sciences, Beihang University, in 2023, under the supervision of Prof. Deren Han and co-supervision of Prof. Chunfeng Cui. His research focuses on numerical optimization, machine learning, and related areas, including (non)convex optimization and tensor optimization. He has participated in national and other research projects and has published multiple papers in top AI conferences such as AAAI and academic journals including IEEE TSP, COAP, JOTA, and JCAM.
+				Qingsong Wang, male, was born in December 1992 in Bazhong, Sichuan Province, China. 
+				
+				He received his PhD in Applied Mathematics from the School of Mathematical Sciences, Beihang University, in 2023, under the supervision of Prof. Deren Han and co-supervision of Prof. Chunfeng Cui. 
+				
+				His research focuses on numerical optimization, machine learning, and related areas, including (non)convex optimization and tensor optimization. 
 			</p>
 		</div>
 		<!--个人简介结束-->
@@ -70,10 +74,10 @@
 			<h3>Education</h3>
 
             <ul>
-            <li> Jan. 2022 – Jan. 2023: Department of Mathematics, National University of Singapore (NUS) Visiting Researcher (CSC Joint Ph.D. Program), Supervisor: Prof. Kim-Chuan Toh
-            <li> Sep. 2019 – Jun. 2023: <b>Ph.D.</b> in Applied Mathematics, Beihang University Supervisor: Prof. Deren Han, Co-Supervisor: Prof. Chunfeng Cui
-            <li> Sep. 2016 – Jun. 2019: <b>M.Sc.</b> in Mathematics, Southwest Jiaotong University Supervisor: Prof. Chengjing Wang
-            <li> Sep. 2011 – Jun. 2015: <b>B.Sc.</b> in Mathematics, Southwest Jiaotong University
+            <li> Jan. 2022 – Jan. 2023: Department of Mathematics, National University of Singapore (NUS). Supervisor: Prof. Kim-Chuan Toh
+            <li> Sep. 2019 – Jun. 2023: <b>Ph.D.</b>  Applied Mathematics, Beihang University. Supervisor: Prof. Deren Han, Co-Supervisor: Prof. Chunfeng Cui
+            <li> Sep. 2016 – Jun. 2019: <b>M.Sc.</b>  Mathematics, Southwest Jiaotong University. Supervisor: Prof. Chengjing Wang
+            <li> Sep. 2011 – Jun. 2015: <b>B.Sc.</b>  Mathematics and Applied Mathematics, Southwest Jiaotong University.
 			<!--  B.S.-->
 
 			</ul> 
