--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<p>
 				Qingsong Wang, male, was born in December 1992 in Bazhong, Sichuan Province, China. 
 				
-				He received his PhD in Applied Mathematics from the School of Mathematical Sciences, Beihang University, in 2023, under the supervision of Prof. Deren Han and co-supervision of Prof. Chunfeng Cui. 
+				He received his PhD in Applied Mathematics from the School of Mathematical Sciences, Beihang University, in 2023. 
 				
 				His research focuses on numerical optimization, machine learning, and related areas, including (non)convex optimization and tensor optimization. 
 			</p>
