--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                          <li> 国家自然科学基金委员会, 重大研究计划, 92473208, 芯粒分解和组合优化方法, 2025/01 - 2028/12, 300万元, 在研, 参与.
                          <li> 国家自然科学基金委员会, 面上项目, 12471282, 耦合张量分解的模型和非光滑优化算法研究, 2025/01 - 2028/12, 43万元, 在研, 参与.
                          <li> 国家自然科学基金委员会, 青年科学基金项目C类, 12401415, 数据驱动下广义张量CP分解的模型与算法研究, 2025/01 - 2027/12, 30万元, 在研, 主持.
-                         <li> 湖南省自然科学基金委员会, 青年科学基金C类, 2025JJ60009, 基于非欧氏分布的张量分解算法及其应用研究. 2025/01 - 2027/12，在研，主持.
+                         <li> 湖南省自然科学基金委员会, 青年科学基金C类, 2025JJ60009, 基于非欧氏分布的张量分解算法及其应用研究. 2025/01 - 2027/12，5万, 在研，主持.
 			<li> 国家自然科学基金委员会, 数学天元基金项目, 12126603, 面向脊柱穿刺消融手术的多模态图像导航关键算法研究, 2022/01 至 2023/12, 100万元, 结题, 参与.
                          <li> 北京航空航天大学，博士研究生卓越学术基金，2022/05-2023/04，4万, 结题，主持.
 					</ul>
