--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div class="grid2" id="biography">
 			<h3>Biography</h3>
 			<p>
-				Qingsong Wang is currently a lecturer (master supervisor) at the School of Mathematics and Computational Science, Xiangtan University. He was born in December 1992 in Bazhong, Sichuan Province, China. 
+				<b> Qingsong Wang </b> is currently a lecturer (master supervisor) at the School of Mathematics and Computational Science, Xiangtan University. He was born in December 1992 in Bazhong, Sichuan Province, China. 
 				
 				He received his PhD in Applied Mathematics from the School of Mathematical Sciences, Beihang University, in 2023. 
 				
