--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 			<h3>Research Interest</h3>
 
             <ul>
-            <li> Algorithms and Theories of (Non)Convex Optimization in Machine Learning
-            <li> Algorithms and Applications of Tensor Optimization
+            <li> (Non)Convex optimization in machine learning
+            <li> Tensor optimization
 
 
 			</ul> 
@@ -168,7 +168,7 @@
                 </div>
 
                 <div class="col-md-8">
-                    <h4><b>A Momentum Accelerated Algorithm for ReLU-Based Nonlinear Matrix Decomposition</b></h4>
+                    <h4><b>A Momentum accelerated algorithm for ReLU-based nonlinear matrix decomposition</b></h4>
                     <h5> <b> Qingsong Wang </b>, Chunfeng Cui<b>*</b>, Deren Han. IEEE Signal Processing Letters. 31, 2865-2869, 2024. </h5>
                     <h6>   
                         [<a href="https://arxiv.org/pdf/2402.02442">paper</a>] 
