--- a/publications.html
+++ b/publications.html
@@ -54,9 +54,10 @@
         <div class="grid3-year"> <h3> Preprints <h3> </div>
             <div class="grid3-content">
                 <ul>
-		    <li> <b>Qingsong Wang</b>, Yunfei Qu, Chunfeng Cui, Deren Han<b>*</b>. An Accelerated Alternating Partial Bregman Algorithm for ReLU-based Matrix Decomposition. arXiv:2503.02386, 2025.
-		    <li> <b>Qingsong Wang</b>, Shengze Xu, Xiaojiao Tong, Tieyong Zeng<b>*</b>. An Improved Optimal Proximal Gradient Algorithm for Non-Blind Image Deblurring. arXiv:2502.07602, 2025.
-                    <li> Zehui Liu, <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>. Multi-step Inertial Accelerated Doubly Stochastic Gradient Methods for Block Term Tensor Decomposition. arXiv:2501.04833, 2025.
+		    <li> Chengcheng Yan, Jiawei Xu, <b>Qingsong Wang</b><b>*</b>, Zheng Peng. A Triple-Inertial Accelerated Alternating Optimization Method for Deep Learning Training. ArXiv:2503.08489, 2025.
+		    <li> <b>Qingsong Wang</b>, Yunfei Qu, Chunfeng Cui, Deren Han<b>*</b>. An Accelerated Alternating Partial Bregman Algorithm for ReLU-based Matrix Decomposition. ArXiv:2503.02386, 2025.
+		    <li> <b>Qingsong Wang</b>, Shengze Xu, Xiaojiao Tong, Tieyong Zeng<b>*</b>. An Improved Optimal Proximal Gradient Algorithm for Non-Blind Image Deblurring. ArXiv:2502.07602, 2025.
+                    <li> Zehui Liu, <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>. Multi-step Inertial Accelerated Doubly Stochastic Gradient Methods for Block Term Tensor Decomposition. ArXiv:2501.04833, 2025.
                 </ul>
             </div>
 	    
