--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <h5> <b> Qingsong Wang </b>, Chunfeng Cui<b>*</b>, Deren Han. IEEE Signal Processing Letters. 31, 2865-2869, 2024. </h5>
                     <h6>   
                         [<a href="https://arxiv.org/pdf/2402.02442">paper</a>] 
-                        <!-- [<a href="https://github.com/xxxx">code</a>] -->
+                        [<a href="https://github.com/nothing2wang/NMD-TM">code</a>]
                     </h6>
                 </div>
             </div>
@@ -191,7 +191,7 @@
                     <h5> <b> Qingsong Wang </b>, Deren Han<b>*</b>. Optimization Methods and Software. 38 (5), 914-946, 2023.</h5>
                     <h6>   
                         [<a href="https://www.tandfonline.com/doi/abs/10.1080/10556788.2023.2189717">paper</a>] 
-                        <!-- [<a href="https://github.com/xxxx">code</a>] -->
+                        [<a href="https://github.com/nothing2wang/BPSGE-Algorithm">code</a>]
                     </h6>
                 </div>
             </div>
