--- a/publications.html
+++ b/publications.html
@@ -86,6 +86,10 @@
                 <ul>
                     <li> <b>Qingsong Wang</b>, Deren Han<b>*</b>. A Bregman stochastic method for nonconvex nonsmooth problem beyond global Lipschitz gradient continuity. Optimization Methods and Software, 38(5), 914-946, 2023.
                     <li> <b>Qingsong Wang</b>, Deren Han<b>*</b>. A generalized inertial proximal alternating linearized minimization method for nonconvex nonsmooth problems. Applied Numerical Mathematics,  189, 66-87, 2023.
+		    <h6>   
+                        [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0168927423000855">paper</a>] 
+                        [<a href="https://github.com/nothing2wang/NiPALM-Algorithm">code</a>]
+                    </h6>
                     <li> <b>Qingsong Wang</b>, Zehui Liu, Chunfeng Cui, Deren Han<b>*</b>. Inertial accelerated SGD algorithms for solving large-scale lower-rank tensor CP decomposition problems. Journal of Computational and Applied Mathematics, 423, 114948, 2023.
                     <li> <b>Qingsong Wang</b>, Chunfeng Cui, Deren Han<b>*</b>. Accelerated doubly stochastic gradient descent for tensor CP decomposition. Journal of Optimization Theory and Applications, 197(2), 665-704, 2023.
                 </ul>
