--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <h4><b>A momentum accelerated algorithm for ReLU-based nonlinear matrix decomposition</b></h4>
                     <h5> <b> Qingsong Wang </b>, Chunfeng Cui<b>*</b>, Deren Han. IEEE Signal Processing Letters. 31, 2865-2869, 2024. </h5>
                     <h6>   
-                        [<a href="https://arxiv.org/pdf/2402.02442">paper</a>] 
+                        [<a href="https://ieeexplore.ieee.org/document/10706860">paper</a>] 
                         [<a href="https://github.com/nothing2wang/NMD-TM">code</a>]
                     </h6>
                 </div>
